Fix header message align to center

--- a/src/static/css/DestinationPage.css
+++ b/src/static/css/DestinationPage.css
@@ -13,5 +13,7 @@
 
 .headerMsg {
     color: white;
+    vertical-align: middle;
+    text-align: center;
 }
 
